# Domain_Specific_Chatbot

./: .gitignore  README.md  data_doc.py  main.py  pyproject.toml  requirements.txt
data/: README.md  machine_learning.docx  machine_learning_tutotrial.txt
notebooks/: document_chatbot.ipynb
src/: app.py  document_chatbot.py  embedding_model.py  file_utils.py
