[project]
name = "domain-specific-chatbot"
version = "0.1.0"
description = "Document-based chatbot using Streamlit and sentence-transformers"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "streamlit>=1.32.0",
    "sentence-transformers>=2.6.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
]
